# kora-os-kernel

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  tailwind.config.js
.agent/rules/: rules.md
.agent/skills/kora-sqlite-rust-engine/: SKILL.md
.agent/skills/kora-svelte-tauri-architect/: SKILL.md
.github/workflows/: lint.yml  rust-check.yml
engines/openclaw/: openclaw.mjs
interfaceDesign/: code.html
projectDocs/: 00_KORA_CONCEPT_AND_PHILOSOPHY.md  01_KORA_SYSTEM_ARCHITECTURE.md  02_KORA_FS_RAG_GOVERNANCE.md  03_KORA_DATA_MODEL_AND_PERSISTENCE.md  04_KORA_UI_UX_SPECIFICATION.md  05_KORA_COMMAND_DICTIONARY.md  06_KORA_DRIVERS_AND_ABSTRACTION.md  07_KORA_SECURITY_AND_AUDIT.md  08_KORA_DEPLOYMENT_GUIDE.md  09_KORA_NATIVE_BRIDGE_PROTOCOL.md  10_KORA_PERFORMANCE_AND_LITE_OPTIMIZATION.md  11_KORA_HARDWARE_PROVISIONING.md
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20240101000000_init.sql  20240325120000_session_vault.sql  20240327000000_agency_isolation.sql  20240401000000_shadow_metadata.sql  20240402000000_zero_copy_rag.sql
src-tauri/src/: ai_engine.rs  audit.rs  context.rs  db.rs  events.rs  jail.rs  lib.rs  main.rs  plugins.rs  pty.rs  rag.rs
src-tauri/src/drivers/: mod.rs  notify.rs  watch.rs
src-tauri/src/governance/: agency.rs
src-tauri/src/security/: vault.rs
src/lib/: bridge.ts
src/lib/components/layout/: BentoGrid.svelte
src/lib/stores/: agency.ts
src/routes/: +page.svelte
(+4 files in other folders)
